Update and rename jokgas.html to index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <main>
         <!-- Product 1 with link -->
         <a href="https://wa.link/y15hor" class="product">
-            <img src="product1.jpg" alt="Produk 1">
+            <img src="book.jpg" alt="makalah">
             <div class="product-content">
                 <h2>Makalah</h2>
                 <p>10 lembar</p>
@@ -118,7 +118,7 @@
 
         <!-- Product 2 with link -->
         <a href="https://wa.link/boaruf" class="product">
-            <img src="product2.jpg" alt="Produk 2">
+            <img src="komputer.jpg" alt="presentasi slide">
             <div class="product-content">
                 <h2>Slide PPT</h2>
                 <p>6 slide</p>
@@ -129,7 +129,7 @@
 
         <!-- Product 3 with link -->
         <a href="https://wa.link/rgd2a9" class="product">
-            <img src="product3.jpg" alt="Produk 3">
+            <img src="kamera.jpg" alt="Video ediiting">
             <div class="product-content">
                 <h2>Video Editting</h2>
                 <p>style | durasi | tingkat kesulitan</p>
@@ -140,7 +140,7 @@
 
         <!-- Product 4 with link -->
         <a href="https://wa.link/t6hqej" class="product">
-            <img src="product4.jpg" alt="Produk 4">
+            <img src="profesional.jpg" alt="proposal">
             <div class="product-content">
                 <h2>Poposal</h2>
                 <p>menyesuaikan</p>
